force-app/main/default/objects/Contract_Schedule__c/Contract_Schedule__c.object-meta.xml
<CustomObject>
    <label>Contract Schedule</label>
    <nameField>
        <displayFormat>Contract Schedule #-{00000}</displayFormat>
        <label>Contract Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>