force-app/main/default/objects/Contract_Schedule__c/fields/Apply_Default_Work_Times__c.field-meta.xml
<CustomField>
    <fullName>Apply_Default_Work_Times__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Apply Default Work Times</label>
    <type>Checkbox</type>
</CustomField>