force-app/main/default/objects/Contract_Schedule__c/fields/Contract_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Schedule_Start_Date__c</fullName>
    <label>Contract Schedule Start Date</label>
    <type>Date</type>
</CustomField>