force-app/main/default/objects/Contract_Schedule__c/fields/Contract_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Schedule_Status__c</fullName>
    <formula>if (Contract_Schedule_Start_Date__c &gt; today(), &quot;Upcoming&quot;,
if (Contract_Schedule_End_Date__c &gt; today(), &quot;Current&quot;,
&quot;Past&quot;))</formula>
    <label>Contract Schedule Status</label>
    <type>Text</type>
</CustomField>