force-app/main/default/objects/Contract_Schedule__c/fields/Days_Not_Specified__c.field-meta.xml
<CustomField>
    <fullName>Days_Not_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Days Not Specified</label>
    <type>Checkbox</type>
</CustomField>