force-app/main/default/objects/Contract_Schedule__c/fields/Default_Daily_Intern_Count__c.field-meta.xml
<CustomField>
    <fullName>Default_Daily_Intern_Count__c</fullName>
    <label>Default Daily Worker Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>