force-app/main/default/objects/Contract_Schedule__c/fields/Default_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_End_Work_Time__c</fullName>
    <label>Default End Work Time</label>
    <type>Time</type>
</CustomField>