force-app/main/default/objects/Contract_Schedule__c/fields/Default_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_Start_Work_Time__c</fullName>
    <label>Default Start Work Time</label>
    <type>Time</type>
</CustomField>