force-app/main/default/objects/Contract_Schedule__c/fields/Designated_Intern_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Designated_Intern_Hours_Per_Week__c</fullName>
    <label>Designated Intern Hours Per Week</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>