force-app/main/default/objects/Contract_Schedule__c/fields/Designated_vs_Scheduled_Hours_Difference__c.field-meta.xml
<CustomField>
    <fullName>Designated_vs_Scheduled_Hours_Difference__c</fullName>
    <formula>Designated_Intern_Hours_Per_Week__c - ( Sunday_Hours__c + Monday_Hours__c + Tuesday_Hours__c + Wednesday_Hours__c + Thursday_Hours__c + Friday_Hours__c + Saturday_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designated vs Scheduled Hours Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>