force-app/main/default/objects/Contract_Schedule__c/fields/Friday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Friday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Friday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules</relationshipLabel>
    <relationshipName>Contract_Schedules_Friday</relationshipName>
    <type>Lookup</type>
</CustomField>