force-app/main/default/objects/Contract_Schedule__c/fields/Friday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Friday_End_Work_Time__c</fullName>
    <label>Friday End Work Time</label>
    <type>Time</type>
</CustomField>