force-app/main/default/objects/Contract_Schedule__c/fields/Friday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Hours__c</fullName>
    <formula>if((( Friday_End_Work_Time__c -  Friday_Start_Work_Time__c )/(60*60*1000))&lt;5, 

(( Friday_End_Work_Time__c -  Friday_Start_Work_Time__c )/(60*60*1000)) *  Friday_Intern_Count__c,

((( Friday_End_Work_Time__c -  Friday_Start_Work_Time__c )/(60*60*1000)))-0.5 *  Friday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Friday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>