force-app/main/default/objects/Contract_Schedule__c/fields/Friday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Friday_Start_Work_Time__c</fullName>
    <label>Friday Start Work Time</label>
    <type>Time</type>
</CustomField>