force-app/main/default/objects/Contract_Schedule__c/fields/Friday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Friday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Friday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules</relationshipLabel>
    <relationshipName>Contract_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>