force-app/main/default/objects/Contract_Schedule__c/fields/Make_Up_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Up Holidays</label>
    <type>Checkbox</type>
</CustomField>