force-app/main/default/objects/Contract_Schedule__c/fields/Monday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Monday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Monday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Monday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Monday</relationshipName>
    <type>Lookup</type>
</CustomField>