force-app/main/default/objects/Contract_Schedule__c/fields/Monday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Monday_End_Work_Time__c</fullName>
    <label>Monday End Work Time</label>
    <type>Time</type>
</CustomField>