force-app/main/default/objects/Contract_Schedule__c/fields/Monday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monday_Hours__c</fullName>
    <formula>if((( Monday_End_Work_Time__c - Monday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Monday_End_Work_Time__c - Monday_Start_Work_Time__c )/(60*60*1000)) * Monday_Intern_Count__c,

((( Monday_End_Work_Time__c - Monday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Monday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Monday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>