force-app/main/default/objects/Contract_Schedule__c/fields/Monday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Monday_Start_Work_Time__c</fullName>
    <label>Monday Start Work Time</label>
    <type>Time</type>
</CustomField>