force-app/main/default/objects/Contract_Schedule__c/fields/Monday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Monday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Monday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Monday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>