force-app/main/default/objects/Contract_Schedule__c/fields/Number_Schedule_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_Schedule_Days__c</fullName>
    <formula>if (Sunday__c, 1, 0) + 
if (Monday__c, 1, 0) + 
if (Tuesday__c, 1, 0) + 
if (Wednesday__c, 1, 0) + 
if (Thursday__c, 1, 0) + 
if (Friday__c, 1, 0) + 
if (Saturday__c, 1, 0)</formula>
    <label># Schedule Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>