force-app/main/default/objects/Contract_Schedule__c/fields/Saturday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Saturday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Saturday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Saturday</relationshipName>
    <type>Lookup</type>
</CustomField>