force-app/main/default/objects/Contract_Schedule__c/fields/Saturday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_End_Work_Time__c</fullName>
    <label>Saturday End Work Time</label>
    <type>Time</type>
</CustomField>