force-app/main/default/objects/Contract_Schedule__c/fields/Saturday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Hours__c</fullName>
    <formula>if((( Saturday_End_Work_Time__c - Saturday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Saturday_End_Work_Time__c - Saturday_Start_Work_Time__c )/(60*60*1000)) * Saturday_Intern_Count__c,

((( Saturday_End_Work_Time__c - Saturday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Saturday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Saturday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>