force-app/main/default/objects/Contract_Schedule__c/fields/Saturday_Intern_Count__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Intern_Count__c</fullName>
    <label>Saturday Worker Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>