force-app/main/default/objects/Contract_Schedule__c/fields/Saturday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saturday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Saturday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Saturday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>