force-app/main/default/objects/Contract_Schedule__c/fields/Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Notes__c</fullName>
    <label>Schedule Notes</label>
    <type>TextArea</type>
</CustomField>