force-app/main/default/objects/Contract_Schedule__c/fields/Scheduled_Intern_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Intern_Hours_Per_Week__c</fullName>
    <formula>Friday_Hours__c +  Monday_Hours__c +  Saturday_Hours__c +  Sunday_Hours__c +  Thursday_Hours__c +  Wednesday_Hours__c +  Tuesday_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Intern Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>