force-app/main/default/objects/Contract_Schedule__c/fields/Sunday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sunday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Sunday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Sunday</relationshipName>
    <type>Lookup</type>
</CustomField>