force-app/main/default/objects/Contract_Schedule__c/fields/Sunday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Hours__c</fullName>
    <formula>if((( Sunday_End_Work_Time__c - Sunday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Sunday_End_Work_Time__c - Sunday_Start_Work_Time__c )/(60*60*1000)) * Sunday_Intern_Count__c,

((( Sunday_End_Work_Time__c - Sunday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Sunday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Sunday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>