force-app/main/default/objects/Contract_Schedule__c/fields/Sunday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Start_Work_Time__c</fullName>
    <label>Sunday Start Work Time</label>
    <type>Time</type>
</CustomField>