force-app/main/default/objects/Contract_Schedule__c/fields/Sunday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sunday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Sunday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Sunday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>