force-app/main/default/objects/Contract_Schedule__c/fields/Thursday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Thursday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Thursday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Thursday</relationshipName>
    <type>Lookup</type>
</CustomField>