force-app/main/default/objects/Contract_Schedule__c/fields/Thursday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_End_Work_Time__c</fullName>
    <label>Thursday End Work Time</label>
    <type>Time</type>
</CustomField>