force-app/main/default/objects/Contract_Schedule__c/fields/Thursday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Hours__c</fullName>
    <formula>if((( Thursday_End_Work_Time__c - Thursday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Thursday_End_Work_Time__c - Thursday_Start_Work_Time__c )/(60*60*1000)) * Thursday_Intern_Count__c,

((( Thursday_End_Work_Time__c - Thursday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Thursday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Thursday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>