force-app/main/default/objects/Contract_Schedule__c/fields/Thursday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Start_Work_Time__c</fullName>
    <label>Thursday Start Work Time</label>
    <type>Time</type>
</CustomField>