force-app/main/default/objects/Contract_Schedule__c/fields/Thursday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thursday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Thursday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Thursday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>