force-app/main/default/objects/Contract_Schedule__c/fields/Tuesday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tuesday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Tuesday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Tuesday</relationshipName>
    <type>Lookup</type>
</CustomField>