force-app/main/default/objects/Contract_Schedule__c/fields/Tuesday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_End_Work_Time__c</fullName>
    <label>Tuesday End Work Time</label>
    <type>Time</type>
</CustomField>