force-app/main/default/objects/Contract_Schedule__c/fields/Tuesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Hours__c</fullName>
    <formula>if((( Tuesday_End_Work_Time__c - Tuesday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Tuesday_End_Work_Time__c - Tuesday_Start_Work_Time__c )/(60*60*1000)) * Tuesday_Intern_Count__c,

((( Tuesday_End_Work_Time__c - Tuesday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Tuesday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Tuesday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>