force-app/main/default/objects/Contract_Schedule__c/fields/Tuesday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Start_Work_Time__c</fullName>
    <label>Tuesday Start Work Time</label>
    <type>Time</type>
</CustomField>