force-app/main/default/objects/Contract_Schedule__c/fields/Tuesday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tuesday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Tuesday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Tuesday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>