force-app/main/default/objects/Contract_Schedule__c/fields/Wednesday_Crew_Chief_Employee__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Crew_Chief_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Wednesday Crew Chief</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Contract Schedules (Wednesday Crew Chief)</relationshipLabel>
    <relationshipName>Contract_Schedules_Wednesday</relationshipName>
    <type>Lookup</type>
</CustomField>