force-app/main/default/objects/Contract_Schedule__c/fields/Wednesday_End_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_End_Work_Time__c</fullName>
    <label>Wednesday End Work Time</label>
    <type>Time</type>
</CustomField>