force-app/main/default/objects/Contract_Schedule__c/fields/Wednesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Hours__c</fullName>
    <formula>if((( Wednesday_End_Work_Time__c - Wednesday_Start_Work_Time__c )/(60*60*1000))&lt;5,

(( Wednesday_End_Work_Time__c - Wednesday_Start_Work_Time__c )/(60*60*1000)) * Wednesday_Intern_Count__c,

((( Wednesday_End_Work_Time__c - Wednesday_Start_Work_Time__c )/(60*60*1000)))-0.5 * Wednesday_Intern_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For shifts over 5 hours, a 30 minute lunch break has been removed per intern.</inlineHelpText>
    <label>Wednesday Worker Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>