force-app/main/default/objects/Contract_Schedule__c/fields/Wednesday_Start_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Start_Work_Time__c</fullName>
    <label>Wednesday Start Work Time</label>
    <type>Time</type>
</CustomField>