force-app/main/default/objects/Contract_Schedule__c/fields/Wednesday_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wednesday Vehicle</label>
    <referenceTo>Fixed_Asset__c</referenceTo>
    <relationshipLabel>Contract Schedules (Wednesday Vehicle)</relationshipLabel>
    <relationshipName>Contract_Schedules_Wednesday_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>