force-app/main/default/objects/Contract_Schedule__c/recordTypes/Existing_Contract_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Existing_Contract_Schedule</fullName>
    <active>true</active>
    <label>Existing Contract Schedule</label>
</RecordType>