force-app/main/default/objects/Contract_Schedule__c/recordTypes/New_Contract_Schedule.recordType-meta.xml
<RecordType>
    <fullName>New_Contract_Schedule</fullName>
    <active>true</active>
    <label>New Contract Schedule</label>
</RecordType>