force-app/main/default/objects/Contract_Schedule__c/validationRules/Contract_Schedule_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Schedule_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_Schedule_End_Date__c &lt;  Contract_Schedule_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Contract_Schedule_End_Date__c</errorDisplayField>
    <errorMessage>Contract Schedule End Date should be after Contract Schedule Start Date</errorMessage>
</ValidationRule>