force-app/main/default/objects/Contract_Schedule__c/validationRules/Daily_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Daily_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>(not(Sunday__c) &amp;&amp;  (Sunday_Intern_Count__c &gt; 0 || not(isblank(Sunday_Start_Work_Time__c)) || not(isblank(Sunday_End_Work_Time__c )))) ||

(not(Monday__c) &amp;&amp;  (Monday_Intern_Count__c &gt; 0 || not(isblank(Monday_Start_Work_Time__c)) || not(isblank(Monday_End_Work_Time__c )))) ||

(not(Tuesday__c) &amp;&amp;  (Tuesday_Intern_Count__c &gt; 0 || not(isblank(Tuesday_Start_Work_Time__c)) || not(isblank(Tuesday_End_Work_Time__c )))) ||

(not(Wednesday__c) &amp;&amp;  (Wednesday_Intern_Count__c &gt; 0 || not(isblank(Wednesday_Start_Work_Time__c)) || not(isblank(Wednesday_End_Work_Time__c )))) ||

(not(Thursday__c) &amp;&amp;  (Thursday_Intern_Count__c &gt; 0 || not(isblank(Thursday_Start_Work_Time__c)) || not(isblank(Thursday_End_Work_Time__c )))) ||

(not(Friday__c) &amp;&amp;  (Friday_Intern_Count__c &gt; 0 || not(isblank(Friday_Start_Work_Time__c)) || not(isblank(Friday_End_Work_Time__c )))) ||

(not(Saturday__c) &amp;&amp;  (Saturday_Intern_Count__c &gt; 0 || not(isblank(Saturday_Start_Work_Time__c)) || not(isblank(Saturday_End_Work_Time__c ))))</errorConditionFormula>
    <errorMessage>Service details only be entered for assigned days.</errorMessage>
</ValidationRule>