force-app/main/default/objects/Contract_Schedule__c/validationRules/Default_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Default_End_Work_Time__c &lt; Default_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Default_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>