force-app/main/default/objects/Contract_Schedule__c/validationRules/Friday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Friday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Friday_End_Work_Time__c &lt; Friday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Friday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>