force-app/main/default/objects/Contract_Schedule__c/validationRules/Monday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Monday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Monday_End_Work_Time__c &lt; Monday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Monday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>