force-app/main/default/objects/Contract_Schedule__c/validationRules/Saturday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Saturday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Saturday_End_Work_Time__c &lt; Saturday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Saturday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>