force-app/main/default/objects/Contract_Schedule__c/validationRules/Sunday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Sunday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Sunday_End_Work_Time__c &lt; Sunday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Sunday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>