force-app/main/default/objects/Contract_Schedule__c/validationRules/Thursday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Thursday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Thursday_End_Work_Time__c &lt; Thursday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Thursday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>