force-app/main/default/objects/Contract_Schedule__c/validationRules/Tuesday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Tuesday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Tuesday_End_Work_Time__c &lt; Tuesday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Tuesday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>