force-app/main/default/objects/Contract_Schedule__c/validationRules/Wednesday_Start_and_End_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Wednesday_Start_and_End_Times</fullName>
    <active>true</active>
    <errorConditionFormula>Wednesday_End_Work_Time__c &lt;  Wednesday_Start_Work_Time__c</errorConditionFormula>
    <errorDisplayField>Wednesday_End_Work_Time__c</errorDisplayField>
    <errorMessage>End Time has to be after Start Time</errorMessage>
</ValidationRule>