force-app/main/default/objects/Contract_Schedule__c/listViews/All_Former_Contract_Schedules.listView-meta.xml
<ListView>
    <fullName>All_Former_Contract_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Grant_Contract__c</columns>
    <columns>Contract_Schedule_Start_Date__c</columns>
    <columns>Contract_Schedule_End_Date__c</columns>
    <columns>Number_Schedule_Days__c</columns>
    <columns>Contract_Schedule_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Schedule_Status__c</field>
        <operation>equals</operation>
        <value>Past</value>
    </filters>
    <label>All Former Contract Schedules</label>
    <language>en_US</language>
</ListView>